iOS overflow Fix 1

--- a/src/styles/components/_map-modal.scss
+++ b/src/styles/components/_map-modal.scss
@@ -43,5 +43,7 @@
 }
 
 .ReactModal__Body--open {
-    overflow-y: hidden;
+    #app {
+        overflow-y: hidden;
+    }
 }
